--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "joi": "^17.6.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
