--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "joi": "^17.6.2",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
